# jumpbookstore

./: LICENSE.txt  README.ja.md  README.md  pyproject.toml
src/jumpbookstore/: cipher.py  cli.py  client.py  extract.py  image_solver.py  utils.py
tests/: test_jumpbookstore.py
